Fix painting artefacts after snapping has be used.

Update the position the snap is shown before and after moving.
Reset the data once the action is finished.
Update the canvas when the interaction is finished so the snap guid is no longer visible.

OK to backport?

BUG: 260418