plugins/defaultTools/defaulttool/ShapeResizeStrategy.h
@@ -46,7 +46,7 @@ public:
 
     void handleMouseMove(const QPointF &mouseLocation, Qt::KeyboardModifiers modifiers);
     KUndo2Command* createCommand();
-    void finishInteraction( Qt::KeyboardModifiers modifiers ) { Q_UNUSED(modifiers); }
+    void finishInteraction(Qt::KeyboardModifiers modifiers);
     virtual void paint( QPainter &painter, const KoViewConverter &converter);
     virtual void handleCustomEvent( KoPointerEvent * event );
 private:
